// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`android BpkNavigationBar should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Back"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "bottom": 15,
            "position": "absolute",
            "start": 72,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
              },
              null,
            ],
          ]
        }
      >
        Backpack
      </Text>
    </View>
  </View>
</View>
`;

exports[`android BpkNavigationBar should render correctly when title is null 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Back"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`android BpkNavigationBar should render correctly with a subtitle view 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
      Object {
        "paddingBottom": 16,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Back"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "bottom": 15,
            "position": "absolute",
            "start": 72,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
              },
              null,
            ],
          ]
        }
      >
        Backpack
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "paddingHorizontal": 8,
      }
    }
  >
    <View
      testID="subtitle-view"
    />
  </View>
</View>
`;

exports[`android BpkNavigationBar should render correctly with a title view 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Back"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Array [
            null,
            Object {
              "maxHeight": 32,
            },
          ]
        }
        testID="title-view"
      />
    </View>
  </View>
</View>
`;

exports[`android BpkNavigationBar should render correctly with an icon in the title 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Back"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "bottom": 15,
            "position": "absolute",
            "start": 72,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(255, 255, 255)",
              },
            ],
          ]
        }
      >
        
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
              },
              Object {
                "lineHeight": 24,
              },
            ],
          ]
        }
      >
        Checkout
      </Text>
    </View>
  </View>
</View>
`;

exports[`android BpkNavigationBar should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
      Object {
        "zIndex": 5,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Back"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "bottom": 15,
            "position": "absolute",
            "start": 72,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
              },
              null,
            ],
          ]
        }
      >
        Backpack
      </Text>
    </View>
  </View>
</View>
`;

exports[`android BpkNavigationBar should render correctly with trailing button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(0, 178, 214)",
        "elevation": 3,
        "flexDirection": "column",
        "paddingHorizontal": 8,
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Close"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "bottom": 15,
            "position": "absolute",
            "start": 72,
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 20,
              "fontWeight": "400",
            },
            Object {
              "fontFamily": "sans-serif-medium",
            },
            Array [
              Object {
                "color": "rgb(255, 255, 255)",
              },
              null,
            ],
          ]
        }
      >
        Backpack
      </Text>
    </View>
    <View
      style={
        Object {
          "borderRadius": 40,
        }
      }
    >
      <View
        accessibilityComponentType="button"
        accessibilityLabel="Done"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeBackgroundAndroid={
          Object {
            "borderless": true,
            "color": 872415231,
            "type": "RippleAndroid",
          }
        }
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "BpkIcon",
                "fontSize": 24,
                "includeFontPadding": false,
              },
              Array [
                Object {
                  "padding": 8,
                },
                Object {
                  "color": "rgb(255, 255, 255)",
                },
              ],
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
